# wasm-stopwatch

./: Cargo.toml  README.md
src/: fps_logger.rs  lib.rs
