[package]
name = "wasm-stopwatch"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
description = "A simple stopwatch for WebAssembly."
license = "MIT"
readme = "README.md"
repository = "https://github.com/nstoddard/wasm-stopwatch"
edition = "2018"

[dependencies]
log = "0.4.6"

[dependencies.web-sys]
version = "0.3.8"
features = [
  "Window",
  "Performance",
]
