[package]
name = "wasm-stopwatch"
version = "0.2.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
description = "A simple stopwatch for games and similar applications. Works on desktop and wasm."
license = "MIT"
readme = "README.md"
repository = "https://github.com/nstoddard/wasm-stopwatch"
edition = "2018"

[dependencies]
log = "0.4.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = "0.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.55", features = [
  "Window",
  "Performance",
] }
